# covid19_data_pipeline

./: .env.example  .gitignore  .sqlfluff  .sqlfluffignore  Makefile  README.md  docker-compose.yaml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  tox.ini
adhoc/: covid19_eda.ipynb  data_analysis.ipynb
covid19_dbt/: .user.yml  dbt_project.yml  profiles.yml
covid19_dbt/macros/: create_minio_secret.sql  standardize_country.sql  standardize_state.sql  try_parse_timestamp.sql  utils.sql
covid19_dbt/models/: source.yml
covid_pipeline/covid_pipeline/: definitions.py  project.py
covid_pipeline/covid_pipeline_tests/: conftest.py  test_covid19_datahub_assets.py  test_covid19_github_csse_assets.py
dags/: pyproject.toml  setup.py
dags/covid_pipeline/: constants.py  definitions.py  jobs.py  schedules.py
dags/covid_pipeline/assets/: __init__.py  covid19_github_csse.py  covid_datahub.py  dbt_core.py  helper.py  schemas.py
dags/covid_pipeline_tests/: conftest.py  test_covid19_datahub_assets.py  test_covid19_github_csse_assets.py
dagster/: setup.py
dagster/covid_pipeline/: definitions.py  project.py  schedules.py
dagster_home/: dagster.yaml
data/: .gitkeep  country_mapping.csv
docker/dagster/: Dockerfile  create_deltalake.py  entrypoint.sh  init_assets.sh
docker/dbt/: Dockerfile  entrypoint.sh
docker/jupyter/: Dockerfile
docker/minio/: Dockerfile  entrypoint.sh
docker/superset/: Dockerfile
infra/dev/: .terraform.lock.hcl  s3.tf  (+2 more)
pipeline/: pyproject.toml  setup.py
transformer/: .user.yml  dbt_project.yml  profiles.yml
(+50 files in other folders)
