[project]
name = "covid_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.12",
    "dagster-dbt==0.26.12",
    "duckdb==1.2.2",
    "dlt==1.10.0",
    "dlt[filesystem]",
    "dlt[deltalake]",
    "pyarrow==17.0.0",
    "dagster-embedded-elt==0.26.12",
    "dbt-core==1.9.4",
    "dbt-duckdb==1.9.3",
    "dagster-duckdb==0.26.12",
    "dagster-webserver==1.10.12",
    "pydantic==2.11.3",
    "watchdog==5.0.3",
    "pandas==2.2.3",
    "loguru==0.7.3"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver==1.10.12",
    "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "covid_pipeline.definitions"
code_location_name = "dagster"